--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-router-dispense",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "description": "A dispense routing plugin based on vue-router",
   "main": "dist/index.cjs.js",
   "scripts": {
@@ -11,9 +11,9 @@
     "url": "git+https://github.com/lazipy/vue-router-dispense.git"
   },
   "keywords": [
-    "vue-router",
-    "despense",
-    "router"
+    "vue",
+    "router",
+    "dispense"
   ],
   "author": "lazipy",
   "license": "MIT",
